# bazel_diagrams_example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
